Sort by pubDate. ALso fix scroll background issue by overflow hidden.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -205,3 +205,8 @@ label {
     top: 45px;
     min-width: 250px;
 }
+
+/* hide scroll bar when model dialog is open.*/
+body.modal-open {
+    overflow: hidden;
+}
